--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 # Rust artifacts
-Cargo.lock
 target/
+Cargo.lock
 
 # Node artifacts
 build/
 prebuilds/
 node_modules/
-*.tgz
+package-lock.json
 
 # Swift artifacts
 .build/
+Package.resolved
 
 # Go artifacts
-go.sum
 _obj/
 
 # Python artifacts
@@ -28,6 +28,13 @@ dist/
 *.dylib
 *.dll
 *.pc
+*.exp
+*.lib
+
+# Zig artifacts
+.zig-cache/
+zig-cache/
+zig-out/
 
 # Example dirs
 /examples/*/
@@ -36,3 +43,8 @@ dist/
 *.wasm
 *.obj
 *.o
+
+# Archives
+*.tar.gz
+*.tgz
+*.zip
