--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,27 +4,26 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tree-sitter-nuon"
-description = "NUON grammar for tree-sitter"
+description = " NUON grammar for tree-sitter "
 version = "0.21.0"
-keywords = ["incremental", "parsing", "tree-sitter", "nushell", "nuon"]
+keywords = ["incremental", "parsing", "tree-sitter", "nuon"]
 classifiers = [
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: MIT License",
   "Topic :: Software Development :: Compilers",
   "Topic :: Text Processing :: Linguistic",
   "Typing :: Typed",
 ]
-authors = [{ name = "Mel Massadian", email = "mel@melmassadian.com" }]
-requires-python = ">=3.8"
+authors = [{ name = " Mel Massadian ", email = "mel@melmassadian.com" }]
+requires-python = ">=3.10"
 license.text = "MIT"
 readme = "README.md"
 
 [project.urls]
-Homepage = "https://github.com/melMass/tree-sitter-nuon"
+Homepage = "https://github.com/melmass/tree-sitter-nuon"
 
 [project.optional-dependencies]
-core = ["tree-sitter~=0.21"]
+core = ["tree-sitter~=0.24"]
 
 [tool.cibuildwheel]
-build = "cp38-*"
+build = "cp310-*"
 build-frontend = "build"
