--- a/package.json
+++ b/package.json
@@ -1,103 +1,102 @@
 {
-    "name": "tree-sitter-nuon",
-    "version": "0.21.0",
-    "description": "NUON grammar for tree-sitter",
-    "repository": "github:melMass/tree-sitter-nuon",
-    "license": "MIT",
-    "main": "bindings/node",
-    "types": "bindings/node",
-    "keywords": [
-        "incremental",
-        "parsing",
-        "tree-sitter",
-        "nushell",
-        "nuon"
-    ],
-    "files": [
-        "grammar.js",
-        "binding.gyp",
-        "prebuilds/**",
-        "bindings/node/*",
-        "queries/*",
-        "src/**"
-    ],
-    "dependencies": {
-        "node-addon-api": "^8.3.1",
-        "node-gyp-build": "^4.8.4",
-        "tree-sitter-json": "^0.24.8"
-    },
-    "peerDependencies": {
-        "tree-sitter": "^0.21.0"
-    },
-    "peerDependenciesMeta": {
-        "tree_sitter": {
-            "optional": true
-        }
-    },
-    "devDependencies": {
-        "eslint": "^8.57.0",
-        "eslint-config-google": "^0.14.0",
-        "prebuildify": "^6.0.0",
-        "tree-sitter-cli": "^0.22.2"
-    },
-    "scripts": {
-        "install": "node-gyp-build",
-        "prebuildify": "prebuildify --napi --strip",
-        "build": "tree-sitter generate --no-bindings",
-        "build-wasm": "tree-sitter build --wasm",
-        "lint": "eslint grammar.js",
-        "parse": "tree-sitter parse",
-        "test": "tree-sitter test"
-    },
-    "tree-sitter": [
-        {
-            "scope": "source.nuon",
-            "file-types": [
-                "nuon"
-            ],
-            "highlights": "queries/highlights.scm"
-        }
-    ],
-    "eslintConfig": {
-        "env": {
-            "commonjs": true,
-            "es2021": true
-        },
-        "extends": "google",
-        "parserOptions": {
-            "ecmaVersion": "latest",
-            "sourceType": "module"
-        },
-        "rules": {
-            "arrow-parens": "off",
-            "camel-case": "off",
-            "indent": [
-                "error",
-                2,
-                {
-                    "SwitchCase": 1
-                }
-            ],
-            "max-len": [
-                "error",
-                {
-                    "code": 160,
-                    "ignoreComments": true,
-                    "ignoreUrls": true,
-                    "ignoreStrings": true
-                }
-            ],
-            "spaced-comment": [
-                "warn",
-                "always",
-                {
-                    "line": {
-                        "markers": [
-                            "/"
-                        ]
-                    }
-                }
-            ]
-        }
+  "name": "tree-sitter-nuon",
+  "version": "0.21.0",
+  "description": "NUON grammar for tree-sitter",
+  "repository": "github:melMass/tree-sitter-nuon",
+  "license": "MIT",
+  "main": "bindings/node",
+  "types": "bindings/node",
+  "keywords": [
+    "incremental",
+    "parsing",
+    "tree-sitter",
+    "nushell",
+    "nuon"
+  ],
+  "files": [
+    "grammar.js",
+    "binding.gyp",
+    "prebuilds/**",
+    "bindings/node/*",
+    "queries/*",
+    "src/**"
+  ],
+  "dependencies": {
+    "node-addon-api": "^8.3.1",
+    "node-gyp-build": "^4.8.4",
+    "tree-sitter-json": "^0.24.8"
+  },
+  "peerDependencies": {
+    "tree-sitter": "^0.21.0"
+  },
+  "peerDependenciesMeta": {
+    "tree_sitter": {
+      "optional": true
     }
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-google": "^0.14.0",
+    "prebuildify": "^6.0.0",
+    "tree-sitter-cli": "^0.22.2"
+  },
+  "scripts": {
+    "build": "tree-sitter generate && node-gyp build",
+    "test": "tree-sitter test && node --test",
+    "parse": "tree-sitter parse",
+    "test-windows": "tree-sitter test",
+    "install": "node-gyp-build",
+    "prebuildify": "prebuildify --napi --strip"
+  },
+  "tree-sitter": [
+    {
+      "scope": "source.nuon",
+      "file-types": [
+        "nuon"
+      ],
+      "highlights": "queries/highlights.scm"
+    }
+  ],
+  "eslintConfig": {
+    "env": {
+      "commonjs": true,
+      "es2021": true
+    },
+    "extends": "google",
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
+    "rules": {
+      "arrow-parens": "off",
+      "camel-case": "off",
+      "indent": [
+        "error",
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "max-len": [
+        "error",
+        {
+          "code": 160,
+          "ignoreComments": true,
+          "ignoreUrls": true,
+          "ignoreStrings": true
+        }
+      ],
+      "spaced-comment": [
+        "warn",
+        "always",
+        {
+          "line": {
+            "markers": [
+              "/"
+            ]
+          }
+        }
+      ]
+    }
+  }
 }
